Fixed up generate button and image generation item alignment in Playground

--- a/src/components/Playground/Playground.scss
+++ b/src/components/Playground/Playground.scss
@@ -1,4 +1,5 @@
 .carousel-container{
-    width: 85%;
-    margin-left: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
